# fastapi_studies

./: .env  .gitignore  LICENSE  database.db  env.txt  pyproject.toml
fastapi_studies/: app.py  database.py  schemas.py  security.py  settings.py
fastapi_studies/controllers/: auth_controller.py  me.py  me_controller.py  profile_controller.py  users_controller.py
fastapi_studies/models/: User.py  user.py
fastapi_studies/routers/: auth.py  me.py  users.py
fastapi_studies/schemas/: me.py  profile.py  user.py
fastapi_studies/services/: users.py
